--- a/cisco-asa-syslog.cabal
+++ b/cisco-asa-syslog.cabal
@@ -19,6 +19,8 @@ library
     , base >=4.13 && <4.15
     , byteslice >=0.2 && <0.3
     , bytesmith >=0.3.6 && <0.4
+    , primitive-unlifted >=0.1.2 && <0.2
+    , text-short >=0.1.3 && <0.2
     , ip >=1.7.1 && <1.8
   hs-source-dirs: src
   default-language: Haskell2010
@@ -35,3 +37,4 @@ test-suite test
     , byteslice >=0.2
     , cisco-asa-syslog
     , ip
+    , text-short >=0.1.3
